objects/kugo2p__ProductCost__c.object
<CustomObject>
    <description>Kugamon - Related object to Additional Product Info that stores Product Cost.</description>
    <fields>
        <fullName>kugo2p__AdditionalProductInfo__c</fullName>
        <label>Additional Product Info</label>
        <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
        <relationshipName>Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__UnitCost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Product Cost</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Cost Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>